# gaitmod

./: .gitignore  .readthedocs.yml  README.md  Untitled Diagram.drawio  _environment.yml  _setup.py  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  python-publish.yml
docs/: requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  modules.rst  readme.rst  results.rst  usage.rst
docs/source/_static/: custom.css
docs/source/examples/: index.rst
examples/: construct_feature_vector.ipynb  example.ipynb  example.py  example_all_data.ipynb  imu.ipynb  lfp.ipynb  lfp_all_data copy.ipynb  lfp_spectral_analysis.ipynb  mohammad_raw.fif  process_lfp_data.ipynb
examples/IMU/: imu.ipynb  process_imu_data.ipynb
examples/LFP/classification_experiments/: evaluate_lstm_model.ipynb  evaluate_lstm_model.py  feature_extraction.ipynb  feature_selection.py  log_reg1.ipynb  log_reg2.py  lstm_classification.ipynb  lstm_eval.txt  lstm_freq.ipynb  lstm_time_ continuous.ipynb  lstm_time_continuous.py  read_from_hctsa,py  read_from_hctsa.py  roc_auc_manual.py  traditional_ml_classification.ipynb  train_lstm_model.ipynb  train_lstm_model.py  write_to_hctsa.py
examples/LFP/features/: extract_features.ipynb
examples/LFP/logReg-experiments/: linear_reg_time.ipynb  log_reg1.ipynb
examples/LFP/lstm-experiments/: time_lstm.ipynb
examples/LFP/regression_experiments/: lstm_epoched_time.py  regression_time.ipynb  regression_time.py  (+1 more)
examples/tutorials/: ecog_lfp.ipynb
gait_modulation/: __init__.py  data_processor.py  feature_extractor.py  file_reader.py  models.py  utils.py  viz.py
gait_modulation/configs/: data_preprocessing.yaml  lstm_config.yaml  regression_lstm_config.yaml
gait_modulation/models/: base_model.py  logistic_regression.py  lstm_classification_model.py  lstm_models.py  regression_models.py
gait_modulation/tests/: test_data_processor.py  test_feature_extractor.py  test_file_reader.py
gait_modulation/utils/: data_processor.py  feature_extractor.py  file_reader.py  utils.py
processed/features/: time_epoched-feat.npz  time_windowed_stat-feat.npz
results/: continuousTime_results.pkl
results/hctsa/: INP_gait_hctsa_chs0.mat  INP_gait_hctsa_chs0_PW_EM59.mat
results/pickles/: subjects_event_idx_dict.pickle
source/: conf.py  index.rst  modules.rst  other_docs.rst
(+1 files in other folders)
